[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/Cooper Black Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://game/ui/DataContainer.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/ui/Container.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/ui/buttons/MenuButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/ui/buttons/RegisterButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://game/ui/menus/LoginMenu.gd" type="Script" id=6]
[ext_resource path="res://game/ui/buttons/OKButton.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[node name="LoginMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -107.0
margin_top = 66.0
margin_right = 107.0
margin_bottom = 124.0
custom_fonts/font = SubResource( 3 )
text = "Login"
align = 1

[node name="Container" parent="." instance=ExtResource( 3 )]

[node name="UserContainer" parent="Container" instance=ExtResource( 2 )]

[node name="PassContainer" parent="Container" instance=ExtResource( 2 )]
margin_top = 41.0
margin_bottom = 78.0

[node name="DataLabel" parent="Container/PassContainer" index="0"]
text = "Contrase√±a"

[node name="DataInput" parent="Container/PassContainer" index="1"]
secret = true

[node name="ButtonContainer" type="HBoxContainer" parent="."]
margin_left = 28.9782
margin_top = 550.586
margin_right = 332.978
margin_bottom = 590.586
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="ButtonContainer" instance=ExtResource( 4 )]
custom_fonts/font = SubResource( 4 )

[node name="RegisterButton" parent="ButtonContainer" instance=ExtResource( 5 )]
margin_left = 154.0
margin_right = 304.0

[node name="OK" parent="." instance=ExtResource( 7 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -122.0
margin_top = 50.5
margin_right = -2.0
margin_bottom = 91.5

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Notification" type="Label" parent="."]
visible = false
margin_left = 527.916
margin_top = 342.141
margin_right = 787.916
margin_bottom = 542.141
rect_min_size = Vector2( 260, 0 )
custom_fonts/font = SubResource( 2 )
autowrap = true
[connection signal="pressed" from="OK" to="." method="_on_OK_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]

[editable path="Container"]

[editable path="Container/UserContainer"]

[editable path="Container/PassContainer"]
